Added class reference documentation

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
         <h1>FMDB</h1>
 
 <p>This is an Objective-C wrapper around SQLite: <a href="http://sqlite.org/">http://sqlite.org/</a></p>
+          
+<p>Also refer to the <a href="html/index.html">FMDB Class Reference</a> documentation.</p>
 
 <h2>The FMDB Mailing List:</h2>
 
