--- a/html/Classes/FMDatabase.html
+++ b/html/Classes/FMDatabase.html
@@ -2261,9 +2261,9 @@ FMDatabase *db     = [FMDatabase databaseWithPath:dbPath];
 		<dl class="argument-def parameter-def">
 			<dt><em>block</em></dt>
 			<dd><p>A block that will be called for any result sets returned by any SQL statements.
-                  Note, if you supply this block, it must return integer value, zero upon success (this would be a good opertunity to use SQLITE_OK),
+                  Note, if you supply this block, it must return integer value, zero upon success (this would be a good opportunity to use SQLITE_OK),
                   non-zero value upon failure (which will stop the bulk execution of the SQL).  If a statement returns values, the block will be called with the results from the query in NSDictionary *resultsDictionary.
-                  This may be <code>nil</code> if you don&rsquo;t care to recive any results.</p></dd>
+                  This may be <code>nil</code> if you don&rsquo;t care to receive any results.</p></dd>
 		</dl>
 		
 	</div>
